# hello-books-swagger.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "title": "Hello Books Application API",
     "contact": {
-      "email": "email@address"
+      "email": "email@address.com"
     },
     "license": {
       "name": "Apache 2.0",
@@ -126,34 +126,6 @@
         }
       }
     },
-    "/books": {
-      "post": {
-        "tags": [
-          "Books"
-        ],
-        "summary": "Handles books' Adding a new book to the application",
-        "description": "This endpoint adds a new book to the books to the library",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "This is the request body object containing books' addition information.",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/addBookRequest"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Book created successfully"
-          }
-        }
-      }
-    },
     "/verifyEmail/:email/:verifyCode": {
       "patch": {
         "tags": ["Users"],
@@ -249,8 +221,8 @@
         "tags": ["Books"],
         "summary": "Handles books' Adding a new book to the application",
         "description": "This endpoint adds a new book to the books to the library",
-        "consumes": ["application/json"],
-        "produces": [
+        "produces": ["application/json"],
+        "parameters": [
           {
             "in": "body",
             "name": "body",
@@ -267,8 +239,57 @@
           }
         }
       }
-    }
+    },
+      "/authors/{authorId}/favourite": {
+         "post": {
+            "tags": [
+               "Books"
+            ],
+            "summary": "Add author as favourite",
+            "description": "This endpoint adds author to user favourite list",
+            "consumes": [
+               "application/json"
+            ],
+            "produces": [
+               "application/json"
+            ],
+            "security": [
+               {
+                  "Bearer": []
+               }
+            ],
+            "parameters": [
+               {
+                  "in": "path",
+                  "name": "authorId",
+                  "type": "integer",
+                  "required": true,
+                  "description": "Author Id"
+               }
+            ],
+            "responses": {
+               "201": {
+                  "description": "Author added to favourite list"
+               },
+               "401": {
+                  "description": "Authentication Error"
+               },
+               "404": {
+                  "description": "Author not found"
+               },
+               "409": {
+                "description": "Author is already added as favourite"
+             },
+               "500": {
+                  "description": "Internal server error"
+               }
+            }
+         }
+      }
+   
   },
+
+
   "definitions": {
     "UserSignupRequest": {
       "title": "User Signup Request",
@@ -359,7 +380,7 @@
         "favoriteAuthor": "Medium"
       }
     },
-    "AddBookRequest": {
+    "addBookRequest": {
 			"title": "Add new book request",
 			"type": "object",
 			"properties": {
@@ -381,20 +402,21 @@
 				},
 				"pages": {
 					"description": "Number of pages the book has",
-					"type": "Number"
+					"type": "integer"
         },
         "author": {
 					"description": "The person that wrote the book (book owner)",
-					"type": "String"
-				},
-				"example": {
-					"title": "Harry Potter",
-					"body": "Harry Potter and the order of Phoenix",
-					"description": "The book gives insight about Loyalty, friendship and bravery by young people. And also defeating evil and restoring glory to a great school",
-					"genre": "Science Fiction",
-					"pages": 475
-				}
-			}
+					"type": "string"
+				}				
+      },
+      "example": {
+        "title": "Harry Potter",
+        "body": "Harry Potter and the order of Phoenix",
+        "description": "The book gives insight about Loyalty, friendship and bravery by young people. And also defeating evil and restoring glory to a great school",
+        "genre": "Science Fiction",
+        "pages": 475,
+        "author": "Harry"
+      }
 		}
   }
 }
